--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "http": "^0.0.1-security",
-    "ts-node-dev": "^2.0.0"
+    "http-status-codes": "^2.3.0",
+    "ts-node-dev": "^2.0.0",
+    "zod": "^4.1.12",
+    "zod-prisma-types": "^3.3.5"
   },
   "devDependencies": {
     "@types/compression": "^1.8.1",
