--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "http": "^0.0.1-security",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "ts-node-dev": "^2.0.0",
     "zod": "^4.1.12",
     "zod-prisma-types": "^3.3.5"
@@ -30,6 +31,7 @@
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.0",
     "dotenv": "^17.2.2",
     "prisma": "^6.19.0",
